--- a/src/App.css
+++ b/src/App.css
@@ -2,15 +2,74 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.black-nav {
+  display: flex;
+  background-color: black;
+  width: 100%;
+  color: white;
+  padding: 20px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.black-nav h4 {
+  font-weight: 600;
+  font-size: 1.6rem;
+}
+
+h4 {
+  cursor: pointer;
+  display: inline-block;
+  margin-right: 10px;
+}
+
+span {
+  cursor: pointer;
+}
+
+.list {
+  text-align: left;
+  padding: 20px;
+  border-bottom: 1px solid grey;
+}
+
+.modal {
+  margin-top: 20px;
+  padding: 20px;
+  background-color: #f8f8f8;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.input-container {
+  margin-top: 20px;
+}
+
+input {
+  margin-bottom: 10px;
+  padding: 10px;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+}
+
+button {
+  background-color: black;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  margin-right: 10px;
+  padding: 10px 20px;
+  font-size: 14px;
+  transition: background-color 0.3s ease;
+}
+
+button.sort-title,
+button.delete {
+  margin-top: 10px;
+}
+
+button:hover {
+  background-color: #333;
 }
 
 .App-header {
@@ -22,17 +81,4 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
