--- a/src/App.css
+++ b/src/App.css
@@ -31,8 +31,17 @@ span {
   border-bottom: 1px solid grey;
 }
 
+.list-description {
+  width: 40%;
+  text-align: left;
+}
+
 .modal {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   margin-top: 20px;
+  margin-bottom: 40px;
   padding: 20px;
   background-color: #f8f8f8;
   border: 1px solid #ddd;
@@ -40,8 +49,22 @@ span {
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
+.modal-description {
+  width: 60%;
+}
+
 .input-container {
+  height: 250px;
   margin-top: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+}
+
+.input-container textarea {
+  width: 40%;
+  height: 100px;
 }
 
 input {
